# html_to_email

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/cmd/: mod.rs
