[package]
name = "html_to_email"
license = "MIT"
version = "1.0.3"
edition = "2018"
description = "A command line converts .html file to .eml file."
authors = ["John <igonejack@gmail.com>"]
repository = "https://github.com/gonejack/html_to_email"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.16"
env_logger = "0.10.0"
lettre = "0.10.0-rc.5"
visdom = { version = "0.5.10", features = ["full"] }
getopts = "0.2.21"
